packages/tiptide/src/tiptide.css
@import 'tailwindcss' prefix(tt);
@source './**/*.{ts,tsx}';
@import 'tw-animate-css';
@import 'shadcn/tailwind.css';
@plugin '@tailwindcss/typography';

@custom-variant dark (&:where(.dark, .dark *));

@theme inline {
  --color-background: var(--tt-background);
  --color-foreground: var(--tt-foreground);
  --color-ring: var(--tt-ring);
  --color-input: var(--tt-input);
  --color-border: var(--tt-border);
  --color-destructive: var(--tt-destructive);
  --color-accent-foreground: var(--tt-accent-foreground);
  --color-accent: var(--tt-accent);
  --color-muted-foreground: var(--tt-muted-foreground);
  --color-muted: var(--tt-muted);
  --color-secondary-foreground: var(--tt-secondary-foreground);
  --color-secondary: var(--tt-secondary);
  --color-primary-foreground: var(--tt-primary-foreground);
  --color-primary: var(--tt-primary);
  --color-popover-foreground: var(--tt-popover-foreground);
  --color-popover: var(--tt-popover);
  --color-card-foreground: var(--tt-card-foreground);
  --color-card: var(--tt-card);
  --radius-sm: calc(var(--tt-radius) - 4px);
  --radius-md: calc(var(--tt-radius) - 2px);
  --radius-lg: var(--tt-radius);
  --radius-xl: calc(var(--tt-radius) + 4px);
  --radius-2xl: calc(var(--tt-radius) + 8px);
  --radius-3xl: calc(var(--tt-radius) + 12px);
  --radius-4xl: calc(var(--tt-radius) + 16px);
}

.tiptide-theme {
  --tt-radius: 0.625rem;
  --tt-background: oklch(1 0 0);
  --tt-foreground: oklch(0.145 0 0);
  --tt-card: oklch(1 0 0);
  --tt-card-foreground: oklch(0.145 0 0);
  --tt-popover: oklch(1 0 0);
  --tt-popover-foreground: oklch(0.145 0 0);
  --tt-primary: oklch(0.205 0 0);
  --tt-primary-foreground: oklch(0.985 0 0);
  --tt-secondary: oklch(0.97 0 0);
  --tt-secondary-foreground: oklch(0.205 0 0);
  --tt-muted: oklch(0.97 0 0);
  --tt-muted-foreground: oklch(0.556 0 0);
  --tt-accent: oklch(0.97 0 0);
  --tt-accent-foreground: oklch(0.205 0 0);
  --tt-destructive: oklch(0.577 0.245 27.325);
  --tt-border: oklch(0.922 0 0);
  --tt-input: oklch(0.922 0 0);
  --tt-ring: oklch(0.708 0 0);
}

.tiptide-theme:where(.dark, .dark *) {
  --tt-background: oklch(0.145 0 0);
  --tt-foreground: oklch(0.985 0 0);
  --tt-card: oklch(0.205 0 0);
  --tt-card-foreground: oklch(0.985 0 0);
  --tt-popover: oklch(0.205 0 0);
  --tt-popover-foreground: oklch(0.985 0 0);
  --tt-primary: oklch(0.922 0 0);
  --tt-primary-foreground: oklch(0.205 0 0);
  --tt-secondary: oklch(0.269 0 0);
  --tt-secondary-foreground: oklch(0.985 0 0);
  --tt-muted: oklch(0.269 0 0);
  --tt-muted-foreground: oklch(0.708 0 0);
  --tt-accent: oklch(0.269 0 0);
  --tt-accent-foreground: oklch(0.985 0 0);
  --tt-destructive: oklch(0.704 0.191 22.216);
  --tt-border: oklch(1 0 0 / 10%);
  --tt-input: oklch(1 0 0 / 15%);
  --tt-ring: oklch(0.556 0 0);
}

@layer components {
  .tiptide-theme {
    @apply tt:bg-background tt:text-foreground;

    scrollbar-width: thin;
  }

  .tiptide-theme * {
    scrollbar-width: thin;
  }

  .tiptide-theme:where(.dark, .dark *) {
    color-scheme: dark;
  }

  .tiptide-theme:where(.dark, .dark *) * {
    scrollbar-color: var(--tt-ring) transparent;
  }
}

/* Tiptide Editor Main Styles */
.dark .tiptide-editor {
  --tt-code-bg-clr: oklch(22% 0 0);
  --tt-code-border-clr: oklch(28% 0 0);
  --tt-pre-code-clr: oklch(92% 0 0);
  --tt-line-through-clr: oklch(55% 0 0);
  --tt-task-list-accent-clr: oklch(95% 0 0);
  --tt-list-marker-clr: oklch(70% 0 0);
}

.tiptide-editor {
  strong,
  b,
  em,
  i,
  s,
  strike,
  del {
    color: inherit !important;
  }

  --tt-code-bg-clr: oklch(96.2% 0 0);
  --tt-code-border-clr: oklch(90.2% 0 0);
  --tt-pre-code-clr: oklch(10% 0 0);
  --tt-line-through-clr: oklch(70% 0 0);
  --tt-task-list-accent-clr: oklch(0 0 0);
  --tt-list-marker-clr: oklch(40% 0 0);
  --tt-editor-selection-bg: oklch(62.006% 0.00007 271.152 / 0.3);
  --tt-root-size: 0.0625rem;

  &::selection {
    background-color: var(--tt-editor-selection-bg);
  }

  code::before,
  code::after {
    content: '';
  }

  code:not(pre *) {
    font-weight: normal;
    font-size: 0.825rem;
    border: 1px solid var(--tt-code-border-clr);
    background-color: var(--tt-code-bg-clr);
    border-radius: 0.355rem;
    padding-inline: 0.3rem;
    padding-block: 0.175rem 0.1rem;
    vertical-align: middle;
  }

  blockquote {
    font-style: normal;
  }

  pre {
    padding-inline: 1rem;
    padding-block: 1rem;
    border: 1px solid var(--tt-code-border-clr);
    background-color: var(--tt-code-bg-clr);
    border-radius: 0.555rem;

    code {
      color: var(--tt-pre-code-clr);
    }
  }

  ol,
  ul {
    li,
    p {
      margin: 0 !important;
    }
    li::marker {
      color: var(--tt-muted-foreground);
    }
    li * {
      color: inherit;
    }
  }

  ul[data-type='taskList'] {
    padding: 0;

    li {
      display: flex !important;
    }
    li > div {
      flex: 1 !important;
    }
    li div p {
      padding-inline-start: 0.725rem !important;
      margin: 0;
    }
    li[data-checked='true'] {
      div {
        text-decoration: line-through;
      }
    }
    input[type='checkbox'] {
      accent-color: var(--tt-task-list-accent-clr);
      cursor: pointer;
      flex-shrink: 0;
    }
  }

  p.is-node-empty::before {
    content: attr(data-placeholder);
    color: oklch(70% 0 0);
    float: left;
    pointer-events: none;
    height: 0;
    font-style: italic;
  }

  /* Image Resizing */
  [data-resize-container] {
    margin-block: 2rem;
    display: flex;
    width: 100%;
    --tt-resize-handle-bg: oklch(73.155% 0.14431 250.444);
    --tt-image-resize-radius: 10px;

    &[data-align='left'] {
      justify-content: flex-start;
    }
    &[data-align='center'] {
      justify-content: center;
    }
    &[data-align='right'] {
      justify-content: flex-end;
    }
  }

  [data-resize-wrapper] {
    border-radius: var(--tt-image-resize-radius);
    width: fit-content;
    position: relative;

    &::before {
      position: absolute;
      isolation: isolate;
      content: '';
      inset: 0;
    }

    &:hover::before {
      background-color: oklch(from var(--tt-primary) l c h / 0.1);
      border-radius: var(--tt-image-resize-radius);
      cursor: pointer;
    }

    img {
      margin-block: 0 !important;
      border-radius: var(--tt-image-resize-radius);
    }
  }

  [data-resize-handle] {
    position: absolute;
    width: 10px;
    height: 10px;
    background-color: var(--tt-resize-handle-bg);
    outline: 2px solid var(--tt-background);
    border-radius: 100%;
    z-index: 2;
    opacity: 0;

    &[data-resize-handle='left'] {
      top: 50% !important;
      left: 0;
      translate: calc(-50% - 2px) -50%;
      cursor: col-resize;
    }

    &[data-resize-handle='right'] {
      top: 50% !important;
      right: 0;
      translate: calc(50% + 2px) -50%;
      cursor: col-resize;
    }
  }

  .ProseMirror-selectednode [data-resize-wrapper] {
    outline: 2px solid var(--tt-resize-handle-bg);
    [data-resize-handle] {
      opacity: 1;
    }
  }
}

.tiptide-preview {
  label:has(input[type='checkbox']) {
    pointer-events: none;
  }

  img[data-align='left'] {
    display: block;
    margin-inline-start: 0;
    margin-inline-end: auto;
  }
  img[data-align='center'] {
    display: block;
    margin-inline-start: auto;
    margin-inline-end: auto;
  }
  img[data-align='right'] {
    display: block;
    margin-inline-start: auto;
    margin-inline-end: 0;
  }
}

/* Bubble menu transition */
div:has(.tiptide-bubble-menu-inner) {
  transition:
    left 150ms ease-out,
    top 150ms ease-out;
  will-change: left, top;
}

.tiptide-bubble-menu-inner-element {
  transition:
    left 150ms ease-out,
    top 150ms ease-out;
  will-change: left, top;
}

/* Suggestions */
span.tiptide-suggestion[data-decoration-content] {
  display: inline-block;
  font-weight: 600;
  width: fit-content;
  isolation: isolate;
  position: relative;

  &::before {
    content: '';
    position: absolute;
    inset-inline: -4px;
    inset-block: 0;
    border-radius: 0.525rem;
    z-index: -1;
    background-color: var(--tt-secondary);
  }
}

/* Slash command container */
.tiptide-slash-command-container {
  animation: tiptide-scale-out 150ms forwards;
  transform-origin: top left;
}

/* Drag Handler */
.tiptide-drag-handler-container {
  cursor: grab;
  transition:
    top 0.2s ease,
    opacity 0.2s ease;
  width: fit-content;
  height: fit-content;
  padding-inline: 0.5rem;
  padding-block: 0.25rem;
  opacity: 0;
  pointer-events: none;

  &:hover,
  &:active {
    opacity: 1 !important;
  }
  &:active {
    cursor: grabbing;
  }
}

.tiptide-text-area:hover .tiptide-drag-handler-container {
  opacity: 0.6;
  pointer-events: all;
}

/* Drop cursor */
.prosemirror-dropcursor-block {
  background-color: var(--tt-ring) !important;
  border-block: 1px solid var(--tt-ring);
}

@keyframes tiptide-scale-out {
  from {
    transform: scale(0.9);
    opacity: 0;
  }
  to {
    transform: scale(1);
    opacity: 1;
  }
}

